--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -267,31 +267,30 @@
             </div>
         </div>
     </div>
-</section><section class="content-12">
-    <a class="wide btn-wide" href="#"><b>Buy Gramm App</b> for $9</a>
+</section>
+<section class="content-12">
 </section><footer class="footer-11">
     <div class="container">
         <a class="brand" href="#">
-            <img src="startup/common-files/icons/infinity-bw@2x.png" width="42" height="21" alt="">
+            <img src="startup/common-files/icons/logo.png" width="42" height="21" alt="">
         </a>
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Portfolio</a></li>
+                <li><a href="http://ujiraniapp.com">Home</a></li>
+                <li><a href="http://ujiraniapp.com/blog">Blog</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
         </nav>
-        <div class="social-btns">
+        <div class="social-btns"><!-- 
             <a href="#">
                 <div class="fui-vimeo"></div>
                 <div class="fui-vimeo"></div>
-            </a>
-            <a href="#">
+            </a> -->
+            <a href="https://www.facebook.com/pages/Ujirani-app/1518675521712883?fref=ts">
                 <div class="fui-facebook"></div>
                 <div class="fui-facebook"></div>
             </a>
-            <a href="#">
+            <a href="https://twitter.com/UjiraniKE">
                 <div class="fui-twitter"></div>
                 <div class="fui-twitter"></div>
             </a>
@@ -299,12 +298,10 @@
     </div>
     <div class="additional-links">
         <div class="container">
-            <p class="lead"><b>200,000</b> users registered since January</p>
+            <p class="lead"><b>1000+</b>registered users</p>
             <a href="#">Terms &amp; Conditions</a>
             <a href="#">Privacy Policy</a>
-            <a href="#">Advertise</a>
-            <a href="#">Affiliate Program</a>
-            <a href="#">Contact Us</a>
+            <a href="mailto:hello@ujiraniapp.com">Contact Us</a>
         </div>
     </div>
 </footer>            <!-- Placed at the end of the document so the pages load faster -->
