--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -10,8 +10,8 @@
         <meta name="apple-mobile-web-app-status-bar-style" content="black" />
         <link rel="shortcut icon" href="startup/flat-ui/images/favicon.ico">
         
-        <link rel="stylesheet" href="startup/flat-ui/bootstrap/css/bootstrap.css">
-        <link rel="stylesheet" href="startup/flat-ui/css/flat-ui.css">
+        <link rel="stylesheet" href="flat-ui/bootstrap/css/bootstrap.css">
+        <link rel="stylesheet" href="flat-ui/css/flat-ui.css">
         <!-- Using only with Flat-UI (free)-->
         <link rel="stylesheet" href="startup/common-files/css/icon-font.css">
         <!-- end -->
