--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -13,10 +13,10 @@
         <link rel="stylesheet" href="flat-ui/bootstrap/css/bootstrap.css">
         <link rel="stylesheet" href="flat-ui/css/flat-ui.css">
         <!-- Using only with Flat-UI (free)-->
-        <link rel="stylesheet" href="startup/common-files/css/icon-font.css">
+        <link rel="stylesheet" href="common-files/css/icon-font.css">
         <!-- end -->
-        <link rel="stylesheet" href="startup/common-files/css/animations.css">
-        <link rel="stylesheet" href="static/css/style.css">
+        <link rel="stylesheet" href="common-files/css/animations.css">
+        <link rel="stylesheet" href="style.css">
         
         <title></title>
     </head>
@@ -26,7 +26,7 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-11 col-sm-offset-1">
-                <a class="brand" href="#"><img src="startup/common-files/icons/logo.png" width="100" height="100" alt=""> </a>
+                <a class="brand" href="#"><img src="common-files/icons/logo.png" width="100" height="100" alt=""> </a>
             </div>
         </div>
     </div>
