still linking images

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,7 +8,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
         <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-        <link rel="shortcut icon" href="startup/flat-ui/images/favicon.ico">
         
         <link rel="stylesheet" href="flat-ui/bootstrap/css/bootstrap.css">
         <link rel="stylesheet" href="flat-ui/css/flat-ui.css">
@@ -26,7 +25,7 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-11 col-sm-offset-1">
-                <a class="brand" href="#"><img src="common-files/icons/logo.png" width="100" height="100" alt=""> </a>
+                <a class="brand" href="#"><img src="assets/images/common-files/icons/logo.png" width="100" height="100" alt=""> </a>
             </div>
         </div>
     </div>
@@ -46,7 +45,7 @@
                     </div>
                 </div>
                 <div class="col-sm-4 col-sm-offset-1">
-                    <img src="startup/common-files/img/header/iphone.png" class="hidden-xs" alt="">
+                    <img src="assets/images/common-files/img/header/iphone.png" class="hidden-xs" alt="">
                 </div>
             </div>
         </div>
@@ -90,64 +89,64 @@
                 <div class="description-top">
                     <h6>Easy to use</h6>
                     To Get started you can use Facebook,Google plus or your email! Easy sign up process.
-                    <img src="startup/common-files/img/content/arrow-tl@2x.png" width="61" height="97" alt="">
+                    <img src="assets/images/common-files/img/content/arrow-tl@2x.png" width="61" height="97" alt="">
                 </div>
                 <div class="img">
-                    <!-- <img src="startup/common-files/img/content/screen-1-bw@2x.png" width="220" height="391" alt=""> -->
-                    <img src="startup/common-files/img/content/Ujirani-Login.png" width="220" height="391" alt="">
+                    <!-- <img src="common-files/img/content/screen-1-bw@2x.png" width="220" height="391" alt=""> -->
+                    <img src="assets/images/common-files/img/content/Ujirani-Login.png" width="220" height="391" alt="">
                 </div>
                 <!-- <div class="description-bottom">
                     <h6>Easy log in process!</h6>
                     Log in as frequent as you can .
-                    <img src="startup/common-files/img/content/arrow-bl@2x.png" width="97" height="110" alt="">
+                    <img src="common-files/img/content/arrow-bl@2x.png" width="97" height="110" alt="">
                 </div> -->
             </div>
             <div class="col-sm-3 box-2">
                 <div class="description-top">
                     <h6>So simple ,you will love it!</h6>
                     To get started, we ask you for your phone number so that we can contact you during emergencies .
-                    <img src="startup/common-files/img/content/arrow-tl@2x.png" width="61" height="97" alt="">
+                    <img src="assets/images/common-files/img/content/arrow-tl@2x.png" width="61" height="97" alt="">
                 </div>
                 <div class="img">
-                    <!-- <img src="startup/common-files/img/content/screen-2-bw@2x.png" width="220" height="391" alt=""> -->
-                    <img src="startup/common-files/img/content/Ujiraniphonenumber.png" width="220" height="391" alt="">
+                    <!-- <img src="startup/assets/images/common-files/img/content/screen-2-bw@2x.png" width="220" height="391" alt=""> -->
+                    <img src="assets/images/common-files/img/content/Ujiraniphonenumber.png" width="220" height="391" alt="">
                 </div>
                <!--  <div class="description-bottom">
                     <h6>Variety of designs</h6>
                     Responsive web design is a web design approach aimed to provide crafting sites.
-                    <img src="startup/common-files/img/content/arrow-br@2x.png" width="97" height="110" alt="">
+                    <img src="startup/assets/images/common-files/img/content/arrow-br@2x.png" width="97" height="110" alt="">
                 </div> -->
             </div>
             <div class="col-sm-3 box-3">
                 <div class="description-top">
                     <h6>Landing Page</h6>
                     This is where all your notifications appear . You also have an access of the panic button and you can also see a list of the people in your community group.
-                    <img src="startup/common-files/img/content/arrow-tr@2x.png" width="61" height="97" alt="">
+                    <img src="assets/images/common-files/img/content/arrow-tr@2x.png" width="61" height="97" alt="">
                 </div>
                 <div class="img">
-                   <!--  <img src="startup/common-files/img/content/screen-3-bw@2x.png" width="220" height="391" alt=""> -->
-                    <img src="startup/common-files/img/content/Ujiranihome.png" width="220" height="391" alt="">
+                   <!--  <img src="startup/assets/images/common-files/img/content/screen-3-bw@2x.png" width="220" height="391" alt=""> -->
+                    <img src="assets/images/common-files/img/content/Ujiranihome.png" width="220" height="391" alt="">
                 </div>
                 <!-- <div class="description-bottom">
                     <h6>Variety of designs</h6>
                     Responsive web design is a web design approach aimed to provide crafting sites.
-                    <img src="startup/common-files/img/content/arrow-bl@2x.png" width="97" height="110" alt="">
+                    <img src="startup/assets/images/common-files/img/content/arrow-bl@2x.png" width="97" height="110" alt="">
                 </div> -->
             </div>
             <div class="col-sm-3 box-4">
                 <div class="description-top">
                     <h6>Quick Navigation</h6>
                     Without iconic symbolsreally finish your work - for clearly understand.
-                    <img src="startup/common-files/img/content/arrow-tr@2x.png" width="61" height="97" alt="">
+                    <img src="assets/images/common-files/img/content/arrow-tr@2x.png" width="61" height="97" alt="">
                 </div>
                 <div class="img">
-                    <!-- <img src="startup/common-files/img/content/screen-4-bw@2x.png" width="220" height="391" alt=""> -->
-                    <img src="startup/common-files/img/content/screen-4@2x.png" width="220" height="391" alt="">
+                    <!-- <img src="startup/assets/images/common-files/img/content/screen-4-bw@2x.png" width="220" height="391" alt=""> -->
+                    <img src="assets/images/common-files/img/content/screen-4@2x.png" width="220" height="391" alt="">
                 </div>
                 <!-- <div class="description-bottom">
                     <h6>Variety of designs</h6>
                     Responsive web design is a web design approach aimed to provide crafting sites.
-                    <img src="startup/common-files/img/content/arrow-br@2x.png" width="97" height="110" alt="">
+                    <img src="startup/assets/images/common-files/img/content/arrow-br@2x.png" width="97" height="110" alt="">
                 </div> -->
             </div>
         </div>
@@ -160,7 +159,7 @@
 
         <div class="row features">
             <div class="col-sm-4">
-                <img src="startup/common-files/icons/retina-ready-s@2x.png" alt="" width="117" height="104">
+                <img src="assets/images/common-files/icons/retina-ready-s@2x.png" alt="" width="117" height="104">
                 <h6>Panic Button</h6>
                 <p>The Panic button is located inside the app . It has four options: 
                 <strong>Security</strong>,
@@ -170,12 +169,12 @@
                 </p>
             </div>
             <div class="col-sm-4">
-                <img src="startup/common-files/icons/clock@2x.png" alt="" width="104" height="104">
+                <img src="assets/images/common-files/icons/clock@2x.png" alt="" width="104" height="104">
                 <h6>Power Panic Button</h6>
                 <p>We turn your power button into a panic button . In the case of an emergency you press your power button rapidly it sends out an alert notification via sms with your location to your neighbors.</p>
             </div>
             <div class="col-sm-4">
-                <img src="startup/common-files/icons/chat.png" alt="" width="101" height="101">
+                <img src="assets/images/common-files/icons/chat.png" alt="" width="101" height="101">
                 <h6>Chat</h6>
                 <p>This is the section where you get to communicate with your neigbors . Get important notifications,catch up with the latest neighbourhood gossip and post notifications too.</p>
             </div>
@@ -188,7 +187,7 @@
             <div class="member-wrapper">
                 <div class="member">
                     <div class="photo-wrapper">
-                        <div class="photo"><img src="startup/common-files/img/crew/muaad.png" alt=""></div>
+                        <div class="photo"><img src="assets/images/common-files/img/crew/muaad.png" alt=""></div>
                         <div class="overlay">
                         </div>
                     </div>
@@ -206,7 +205,7 @@
             <div class="member-wrapper">
                 <div class="member">
                     <div class="photo-wrapper">
-                        <div class="photo"><img src="startup/common-files/img/crew/cynthia.JPG" alt=""></div>
+                        <div class="photo"><img src="assets/images/common-files/img/crew/cynthia.JPG" alt=""></div>
                         <div class="overlay">
                             <!-- <a href="#"><span class="fui-facebook"></span></a>
                             <a href="#"><span class="fui-twitter"></span></a> -->
@@ -226,7 +225,7 @@
             <div class="member-wrapper">
                 <div class="member">
                     <div class="photo-wrapper">
-                        <div class="photo"><img src="startup/common-files/img/crew/adrian-v.png" alt=""></div>
+                        <div class="photo"><img src="assets/images/common-files/img/crew/adrian-v.png" alt=""></div>
                         <div class="overlay">
                         </div>
                     </div>
@@ -272,7 +271,7 @@
 </section><footer class="footer-11">
     <div class="container">
         <a class="brand" href="#">
-            <img src="startup/common-files/icons/logo.png" width="42" height="21" alt="">
+            <img src="assets/images/common-files/icons/logo.png" width="42" height="21" alt="">
         </a>
         <nav>
             <ul>
