--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -25,7 +25,7 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-11 col-sm-offset-1">
-                <a class="brand" href="#"><img src="assets/images/common-files/icons/logo.png" width="100" height="100" alt=""> </a>
+                <a class="brand" href="ujiraniapp.com"><img src="assets/images/common-files/icons/logo.png" width="100" height="100" alt=""> </a>
             </div>
         </div>
     </div>
