added ruby racer to gemfile

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -270,7 +270,7 @@
 <section class="content-12">
 </section><footer class="footer-11">
     <div class="container">
-        <a class="brand" href="#">
+        <a class="brand" href="ujiraniapp.com">
             <img src="assets/images/common-files/icons/logo.png" width="42" height="21" alt="">
         </a>
         <nav>
